# Prophet_Forecasting

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  import_real_data.py  pyproject.toml  setup_db.py
.github/workflows/: ci.yml
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CwfLogo.tsx  RingComposition.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
src/prophet_forecasting_tool/: app.py  cli.py  config.py  data_loader.py  evaluate.py  logging_config.py  model.py  services.py  utils.py
src/prophet_forecasting_tool/templates/: base.html  forecast.html  historical_data.html  index.html
tests/: conftest.py  test_api.py  test_data_loader.py  test_e2e.py  test_evaluate.py  test_model.py  test_postgres.py  test_services.py  test_ui.py  test_utils.py
