[project]
name = "prophet-forecasting-tool"
version = "0.2.0"
description = "Time series forecasting utility that uses Prophet to forecast call centre volumes."
requires-python = ">=3.11"
dependencies = [
    "prophet>=1.1.5",
    "pandas>=2.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
    "Flask>=3.0",
    "holidays>=0.45",
    "python-dateutil>=2.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
prophet_forecaster = "prophet_forecasting_tool.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
