[project]
name = "prophet-forecasting-tool"
version = "0.2.0"
description = "Time series forecasting utility that uses Prophet to forecast call centre volumes."
requires-python = ">=3.11"
dependencies = [
    "prophet>=1.1.5",
    "pandas>=2.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
    "Flask>=3.0",
    "holidays>=0.45",
    "python-dateutil>=2.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "vulture>=2.10",
    "mypy>=1.10",
    "pandas-stubs>=2.1",
    "types-python-dateutil>=2.8",
]

[project.scripts]
prophet_forecaster = "prophet_forecasting_tool.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
files = ["src/prophet_forecasting_tool"]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
